toast css fix for z-index and color

--- a/wfiles/css/extras/wacss.css
+++ b/wfiles/css/extras/wacss.css
@@ -87,12 +87,11 @@ body{
   border-radius: .25rem;
   border: 1px solid;
   background-clip: padding-box;
-  background-color:inherit;
+  background-color:#FFF;
   padding: .375rem .75rem;
   max-width: 350px;
   overflow:auto;
   opacity: 100;
-  z-index: 999;
   margin-bottom: 5px;
   transition: all 0.55s ease;
 }
